Fomrs Functional and working

--- a/index.html
+++ b/index.html
@@ -5,10 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
   <script defer src="index.js"></script>
   <title>Age Calculator</title>
 </head>
 <body>
-  
+      <main class="container">
+        <div class="formsContainer">  
+          <div class="form">
+            <label class="inputTitle">Day</label>
+            <input type="number" placeholder="DD">
+            <label class="dayError">Please enter a valid Day</label>
+          </div>
+          <div class="form">
+            <label class="inputTitle">Month</label>
+            <input type="number" placeholder="MM">
+            <label class="monthError">Please enter a valid Month</label>
+          </div>
+          <div class="form">
+            <label class="inputTitle">Year</label>
+            <input type="number" placeholder="YYYY">
+            <label class="yearError">Please enter a valid Year</label>
+          </div>
+        </div>
+        <hr>
+      </main>
 </body>
 </html>
