All Html And Css Responsive and Complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
             <label class="yearError">Please enter a valid Year</label>
           </div>
         </div>
-        <hr>
+        <div class="buttonandbreak">
+          <hr>
+          <button><img src="./assets/images/icon-arrow.svg" alt="arrow icon"></button>
+        </div> 
+        <div class="outputContainer">
+            <h1><span class="finalValue">--</span>years<br>
+            <span class="finalValue">--</span>months<br>
+            <span class="finalValue">--</span>days</h1>
+        </div>
       </main>
 </body>
 </html>
