Border Radius Better responsiveness fix

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="buttonandbreak">
           <hr>
-          <button><img src="./assets/images/icon-arrow.svg" alt="arrow icon"></button>
+          <button id="button"><img src="./assets/images/icon-arrow.svg" alt="arrow icon"></button>
         </div> 
         <div class="outputContainer">
             <h1><span class="finalValue">--</span>years<br>
