Input Check Functional

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
           <div class="form">
             <label class="inputTitle">Day</label>
             <input type="number" placeholder="DD" id="dayInput">
-            <label class="dayError error">Please enter a valid Day</label>
+            <label class="dayError error"></label>
           </div>
           <div class="form">
             <label class="inputTitle">Month</label>
             <input type="number" placeholder="MM" id="monthInput">
-            <label class="monthError error">Please enter a valid Month</label>
+            <label class="monthError error"></label>
           </div>
           <div class="form">
             <label class="inputTitle">Year</label>
             <input type="number" placeholder="YYYY" id="yearInput">
-            <label class="yearError error">Please enter a valid Year</label>
+            <label class="yearError error"></label>
           </div>
         </div>
         <div class="buttonandbreak">
