Added UX Improvement

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </head>
 <body>
       <main class="container">
-        <div class="formsContainer">  
+        <h1>Age Calculator</h1>
+        <h2>Please Enter Your Date Of Birth(GC)</h2>
+        <div class="formsContainer"> 
           <div class="form">
             <label class="inputTitle">Day</label>
             <input type="number" placeholder="DD" id="dayInput">
