Better Error Message

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <h2>Please Enter Your Date Of Birth(GC)</h2>
         <div class="formsContainer"> 
           <div class="form">
-            <label class="inputTitle">Day</label>
+            <label class="inputTitle dayTitle">Day</label>
             <input type="number" placeholder="DD" id="dayInput">
             <label class="dayError error"></label>
           </div>
           <div class="form">
-            <label class="inputTitle">Month</label>
+            <label class="inputTitle monthTitle">Month</label>
             <input type="number" placeholder="MM" id="monthInput">
             <label class="monthError error"></label>
           </div>
           <div class="form">
-            <label class="inputTitle">Year</label>
+            <label class="inputTitle yearTitle">Year</label>
             <input type="number" placeholder="YYYY" id="yearInput">
             <label class="yearError error"></label>
           </div>
